tests/snapshots/test_nom_from_file__afiro_ext.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: "Problem name: afiro_ext.mps"
sense: Minimize
objectives:
  OBJ1:
    name: OBJ1
    coefficients:
      - var_name: X02
        coefficient: -0.4
      - var_name: X14
        coefficient: -0.32
      - var_name: X23
        coefficient: -0.6
      - var_name: X36
        coefficient: -0.48
      - var_name: X39
        coefficient: 10
  OBJ2:
    name: OBJ2
    coefficients:
      - var_name: X03
        coefficient: 1
      - var_name: X06
        coefficient: 2.5
      - var_name: X08
        coefficient: -5
  OBJ3:
    name: OBJ3
    coefficients:
      - var_name: X03
        coefficient: -10.4
      - var_name: X07
        coefficient: -2.5
      - var_name: X10
        coefficient: 2.1
  OBJECTIV:
    name: OBJECTIV
    coefficients:
      - var_name: PBOSHNL0
        coefficient: -0.23519
      - var_name: PBOSHNL1
        coefficient: -0.23519
      - var_name: PBOSHNL7
        coefficient: 0.02469
      - var_name: PBOSHNL8
        coefficient: 0.02665
      - var_name: PBOSLAX0
        coefficient: -0.13092
      - var_name: PBOSLAX1
        coefficient: -0.13092
      - var_name: PBOSLAX7
        coefficient: 0.03462
      - var_name: PBOSSEA0
        coefficient: -0.12596
      - var_name: PBOSSEA1
        coefficient: -0.12596
      - var_name: PBOSSEA2
        coefficient: -0.12596
      - var_name: PBOSSFO0
        coefficient: -0.13481
      - var_name: PBOSSFO1
        coefficient: -0.13481
      - var_name: PBOSTPE1
        coefficient: 0.05629
      - var_name: PBOSTPE2
        coefficient: 0.0528
      - var_name: PBOSTYO1
        coefficient: 0.04525
constraints:
  R09:
    type: Standard
    name: R09
    coefficients:
      - var_name: X01
        coefficient: -1
      - var_name: X02
        coefficient: 1
      - var_name: X03
        coefficient: 1
    operator: EQ
    rhs: 0
  R10:
    type: Standard
    name: R10
    coefficients:
      - var_name: X01
        coefficient: -1.06
      - var_name: X04
        coefficient: 1
    operator: EQ
    rhs: 0
  R12:
    type: Standard
    name: R12
    coefficients:
      - var_name: X06
        coefficient: -1
      - var_name: X07
        coefficient: -1
      - var_name: X08
        coefficient: -1
      - var_name: X09
        coefficient: -1
      - var_name: X14
        coefficient: 1
      - var_name: X15
        coefficient: 1
    operator: EQ
    rhs: 0
  R13:
    type: Standard
    name: R13
    coefficients:
      - var_name: X06
        coefficient: -1.06
      - var_name: X07
        coefficient: -1.06
      - var_name: X08
        coefficient: -0.96
      - var_name: X09
        coefficient: -0.86
      - var_name: X16
        coefficient: 1
    operator: EQ
    rhs: 0
  R19:
    type: Standard
    name: R19
    coefficients:
      - var_name: X22
        coefficient: -1
      - var_name: X23
        coefficient: 1
      - var_name: X24
        coefficient: 1
      - var_name: X25
        coefficient: 1
    operator: EQ
    rhs: 0
  R20:
    type: Standard
    name: R20
    coefficients:
      - var_name: X22
        coefficient: -0.43
      - var_name: X26
        coefficient: 1
    operator: EQ
    rhs: 0
  R22:
    type: Standard
    name: R22
    coefficients:
      - var_name: X28
        coefficient: -0.43
      - var_name: X29
        coefficient: -0.43
      - var_name: X30
        coefficient: -0.39
      - var_name: X31
        coefficient: -0.37
      - var_name: X38
        coefficient: 1
    operator: EQ
    rhs: 0
  R23:
    type: Standard
    name: R23
    coefficients:
      - var_name: X28
        coefficient: 1
      - var_name: X29
        coefficient: 1
      - var_name: X30
        coefficient: 1
      - var_name: X31
        coefficient: 1
      - var_name: X36
        coefficient: -1
      - var_name: X37
        coefficient: 1
      - var_name: X39
        coefficient: 1
    operator: EQ
    rhs: 44
  X05:
    type: Standard
    name: X05
    coefficients:
      - var_name: X01
        coefficient: 1
    operator: LTE
    rhs: 80
  X17:
    type: Standard
    name: X17
    coefficients:
      - var_name: X06
        coefficient: 1
      - var_name: X10
        coefficient: -1
    operator: LTE
    rhs: 80
  X18:
    type: Standard
    name: X18
    coefficients:
      - var_name: X07
        coefficient: 1
      - var_name: X11
        coefficient: -1
    operator: LTE
    rhs: 0
  X19:
    type: Standard
    name: X19
    coefficients:
      - var_name: X08
        coefficient: 1
      - var_name: X12
        coefficient: -1
    operator: LTE
    rhs: 0
  X20:
    type: Standard
    name: X20
    coefficients:
      - var_name: X09
        coefficient: 1
      - var_name: X13
        coefficient: -1
    operator: LTE
    rhs: 0
  X21:
    type: Standard
    name: X21
    coefficients:
      - var_name: X02
        coefficient: -1
      - var_name: X14
        coefficient: 1.4
    operator: LTE
    rhs: 0
  X27:
    type: Standard
    name: X27
    coefficients:
      - var_name: X22
        coefficient: 1
    operator: LTE
    rhs: 500
  X40:
    type: Standard
    name: X40
    coefficients:
      - var_name: X28
        coefficient: 1
      - var_name: X32
        coefficient: -1
    operator: LTE
    rhs: 500
  X41:
    type: Standard
    name: X41
    coefficients:
      - var_name: X29
        coefficient: 1
      - var_name: X33
        coefficient: -1
    operator: LTE
    rhs: 0
  X42:
    type: Standard
    name: X42
    coefficients:
      - var_name: X30
        coefficient: 1
      - var_name: X34
        coefficient: -1
    operator: LTE
    rhs: 0
  X43:
    type: Standard
    name: X43
    coefficients:
      - var_name: X31
        coefficient: 1
      - var_name: X35
        coefficient: -1
    operator: LTE
    rhs: 0
  X44:
    type: Standard
    name: X44
    coefficients:
      - var_name: X23
        coefficient: -1
      - var_name: X36
        coefficient: 1.4
    operator: LTE
    rhs: 0
  X45:
    type: Standard
    name: X45
    coefficients:
      - var_name: X10
        coefficient: 2.364
      - var_name: X11
        coefficient: 2.386
      - var_name: X12
        coefficient: 2.408
      - var_name: X13
        coefficient: 2.429
      - var_name: X25
        coefficient: -1
      - var_name: X32
        coefficient: 2.191
      - var_name: X33
        coefficient: 2.219
      - var_name: X34
        coefficient: 2.249
      - var_name: X35
        coefficient: 2.279
    operator: LTE
    rhs: 0
  X46:
    type: Standard
    name: X46
    coefficients:
      - var_name: X03
        coefficient: -1
      - var_name: X22
        coefficient: 0.109
    operator: LTE
    rhs: 0
  X47:
    type: Standard
    name: X47
    coefficients:
      - var_name: X15
        coefficient: -1
      - var_name: X28
        coefficient: 0.109
      - var_name: X29
        coefficient: 0.108
      - var_name: X30
        coefficient: 0.108
      - var_name: X31
        coefficient: 0.107
    operator: LTE
    rhs: 0
  X48:
    type: Standard
    name: X48
    coefficients:
      - var_name: X01
        coefficient: 0.301
      - var_name: X24
        coefficient: -1
    operator: LTE
    rhs: 0
  X49:
    type: Standard
    name: X49
    coefficients:
      - var_name: X06
        coefficient: 0.301
      - var_name: X07
        coefficient: 0.313
      - var_name: X08
        coefficient: 0.313
      - var_name: X09
        coefficient: 0.326
      - var_name: X37
        coefficient: -1
    operator: LTE
    rhs: 0
  X50:
    type: Standard
    name: X50
    coefficients:
      - var_name: X04
        coefficient: 1
      - var_name: X26
        coefficient: 1
    operator: LTE
    rhs: 310
  X51:
    type: Standard
    name: X51
    coefficients:
      - var_name: X16
        coefficient: 1
      - var_name: X38
        coefficient: 1
    operator: LTE
    rhs: 1300
variables:
  PBOSHNL0:
    name: PBOSHNL0
    var_type: Free
  PBOSHNL1:
    name: PBOSHNL1
    var_type: Free
  PBOSHNL7:
    name: PBOSHNL7
    var_type: Free
  PBOSHNL8:
    name: PBOSHNL8
    var_type: Free
  PBOSLAX0:
    name: PBOSLAX0
    var_type: Free
  PBOSLAX1:
    name: PBOSLAX1
    var_type: Free
  PBOSLAX7:
    name: PBOSLAX7
    var_type: Free
  PBOSSEA0:
    name: PBOSSEA0
    var_type: Free
  PBOSSEA1:
    name: PBOSSEA1
    var_type: Free
  PBOSSEA2:
    name: PBOSSEA2
    var_type: Free
  PBOSSFO0:
    name: PBOSSFO0
    var_type: Free
  PBOSSFO1:
    name: PBOSSFO1
    var_type: Free
  PBOSTPE1:
    name: PBOSTPE1
    var_type: Free
  PBOSTPE2:
    name: PBOSTPE2
    var_type: Free
  PBOSTYO1:
    name: PBOSTYO1
    var_type: Free
  X01:
    name: X01
    var_type:
      DoubleBound:
        - 0
        - 1
  X02:
    name: X02
    var_type:
      UpperBound: 1.2
  X03:
    name: X03
    var_type: Free
  X04:
    name: X04
    var_type: Free
  X06:
    name: X06
    var_type:
      LowerBound: 3
  X07:
    name: X07
    var_type: Free
  X08:
    name: X08
    var_type: Free
  X09:
    name: X09
    var_type:
      LowerBound: -inf
  X10:
    name: X10
    var_type: Free
  X11:
    name: X11
    var_type: Free
  X12:
    name: X12
    var_type: Free
  X13:
    name: X13
    var_type: Free
  X14:
    name: X14
    var_type: Free
  X15:
    name: X15
    var_type: Free
  X16:
    name: X16
    var_type: General
  X22:
    name: X22
    var_type: Free
  X23:
    name: X23
    var_type: Free
  X24:
    name: X24
    var_type: Free
  X25:
    name: X25
    var_type: Free
  X26:
    name: X26
    var_type: Free
  X28:
    name: X28
    var_type: Free
  X29:
    name: X29
    var_type: Free
  X30:
    name: X30
    var_type: Free
  X31:
    name: X31
    var_type: Integer
  X32:
    name: X32
    var_type: Integer
  X33:
    name: X33
    var_type: Free
  X34:
    name: X34
    var_type: Free
  X35:
    name: X35
    var_type: Free
  X36:
    name: X36
    var_type: Free
  X37:
    name: X37
    var_type: Free
  X38:
    name: X38
    var_type: Binary
  X39:
    name: X39
    var_type: Free
